--- a/portfolio/static/portfolio/css/responsive.css
+++ b/portfolio/static/portfolio/css/responsive.css
@@ -13,7 +13,7 @@
         display: flex;
     }
 
-    .theme-toggle {
+    .navbar .theme-toggle {
         display: none;
     }
 
